# ljpeg

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  index.html  ljpeg.py  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
jpegdir/: blkint.jpg.1  blkint.jpg.3  globals.h  jpeg.c  jpeg_static  lexer.c  lexer.l  makefile
src/ljpeg/: custom_install.py  ljpeg.py  skeleton.py
src/ljpeg/jpegdir/: blkint.jpg.2  codec.c  doc.ps  io.c  jpeg.c  lexer.l  makefile  marker.c  prototypes.h  stream.c  stream.h  system.h  test.3stream  test.huff  test.q  transform.c
tests/: conftest.py  test_skeleton.py
